--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "mongoose": "^6.8.3",
+    "redis": "^3.1.2",
     "shortid": "^2.2.16",
     "valid-url": "^1.0.9",
     "validator": "^13.7.0"
